   (resource leak).
 - xc284-improvescrollback.diff
 - Made /away work even when the reason setting is empty.
 - Using /part on a channel that contains a quotation mark now works [1800855].
 - Changed the default encoding to "IRC" (CP1252/Unicode Hybrid) for both Unix
   and Windows.
 - Fixed alert balloons failing if the text contained "<" characters [1827629].
 - 
 - 


------------------------------------------------------------------------------
 2.8.4 - 01/Jul/2007
------------------------------------------------------------------------------

 - Updated translations (cs, de, ko, mk, sv, vi).
 - System-Tray balloons now get the xchat icon instead of a generic one.
 - Fixed the notify-send zombies (released as xc282-fixtrayzombies.diff).
 - Fixed underscore ('_') in real names in the nick-name right-click menu being
   drawn as a underline.
 - ut2004:// URLs are now underlined too.
 - /set gui_tray_flags 4 will now enable a "Minimize to tray" feature. Clicking
   the window minimize button will minimize to tray instead of the task-bar.
 - Fixed bug: [1680762] Notify fails if network name contains spaces.
 - Extended tclConfig.sh search paths so it hopefully works on Ubuntu now.
 - Added a feature that reloads conversations from last time you used XChat
   (type /set text_replay 0 to disable it).
 - Fixed /LASTLOG printing everything twice if you had Indented Nicks off.
 - The CTRL-F keybinding (Find) is now disabled when using Emacs keys.
 - Added /SET gui_tweaks. See http://forum.xchat.org/viewtopic.php?p=13766
 - Fixed opening URLs on KDE that didn't begin with http:// or other protocol.
 - A better quit dialog which warns you if you're connected to IRC or have
   active file transfers.
 - Fixed: [1741525] Cycle selected channel (Luca Falavigna).
 - Fixed: [1737249] Doesn't recognize nicks with halfop mode on hovering.
 - The userlist and treeview can now be placed on the same side, with a resize