@@ -27,6 +27,12 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - Fixed alert balloons failing if the text contained "<" characters [1827629].
  - 
  - 
+ - Perl (Lian Wan Situ)
+  * /reloadall will now reload all the scripts that are currently load instead
+    of simply reruning the autoload routine
+  * gtk/glib/gdk errors and warnings have been redirected back to stderr so
+    they will no longer show up in the text box as a result of having the Perl
+	 plugin loaded
 
 
 ------------------------------------------------------------------------------
